<resources>
    <string name="app_name">Casino</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="newGame_button">New Game</string>
    <string name="coinToss_head">Heads</string>
    <string name="coinToss_tails">Tails</string>
    <string name="loadGame_button">Load Game</string>
    <string name="play_button">Play!</string>
    <string name="humanHandCard1">Hhand1</string>
    <string name="humanHandCard2">Hhand2</string>
    <string name="humanHandCard3">Hhand3</string>
    <string name="humanHandCard4">Hhand4</string>
    <string name="humanHandTextView">Your Hand</string>
    <string name="outputConsole">Console</string>
    <string name="computerHandTextView">Computer Hand</string>
    <string name="humanPileTextView">Your Pile</string>
    <string name="computerPileTextView">Computer Pile</string>
    <string name="computerHandCard1">Chand1</string>
    <string name="computerHandCard2">Chand2</string>
    <string name="computerHandCard3">Chand3</string>
    <string name="computerHandCard4">Chand4</string>
    <string name="saveButton">Save</string>
    <string name="helpButton">Help</string>
    <string name="coinFlipImage">Coin Flip</string>
    <string name="saveTextView">Save</string>
    <string name="helpTextView">Help</string>
    <string name="tableTextView">Table</string>
    <string name="consoleTextView">Console</string>
    <string name="welcomeTextView">Welcome to Casino!</string>
    <string name="deckTextView">Deck</string>
    <string name="tableCard1">Tcard1</string>
    <string name="tableCard2">Tcard2</string>
    <string name="tableCard3">Tcard3</string>
    <string name="tableCard7">Tcard7</string>
    <string name="tableCard4">Tcard4</string>
    <string name="tableCard5">Tcard5</string>
    <string name="tableCard6">Tcard6</string>
    <string name="tableCard8">Tcard8</string>
    <string name="tableCard9">Tcard9</string>
    <string name="tableCard10">Tcard10</string>
    <string name="tableCard11">Tcard11</string>
    <string name="tableCard12">Tcard12</string>
    <string name="trailButton">Trail</string>
    <string name="computerMoveButton">Computer Make Move</string>
    <string name="captureButton">Capture</string>
    <string name="captureBuildButton">Capture Build</string>
    <string name="captureSetButton">Capture Set</string>
    <string name="captureSameValueButton">Capture Same Value Card</string>
    <string name="captureDoneButton">Done</string>
    <string name="addSetButton">Add Set</string>
    <string name="movesTextView">Moves</string>
    <string name="backButton">Back</string>
    <string name="buildButton">Build</string>
    <string name="buildNewButton">New Build</string>
    <string name="existinbBuilButton">Existing Build</string>
    <string name="insideCaptureBuild">Capture Build</string>
    <string name="mostCardsTextView">Most Cards</string>
    <string name="mostSpadesTextView">Most spades</string>
    <string name="tenOfDiamondsTextView">Ten of Diamons</string>
    <string name="twoOfSpadesTextView">Two of Spades</string>
    <string name="playNewRoundButton">Play new round!</string>
    <string name="mostAcesTextView">Most Aces</string>
    <string name="gameWonTextView">Game Won</string>
    <string name="seeResultsButton">See Results</string>
    <string name="humanScoreTextView">Your Score</string>
    <string name="computerScoreTextView">Computer Score</string>
    <string name="endGameButton">End Game</string>
    <string name="playLoadButton">Play Loaded Game!</string>
</resources>
