<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    tools:context=".CoinToss">

    <Button
        android:id="@+id/HeadsButton"
        android:layout_width="193dp"
        android:layout_height="120dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:onClick="heads"
        android:text="@string/coinToss_head"
        app:layout_constraintEnd_toStartOf="@+id/TailsButton"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/TailsButton"
        android:layout_width="191dp"
        android:layout_height="125dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:onClick="heads"
        android:text="@string/coinToss_tails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/HeadsButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CoinTossTextView"
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="300dp"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/PlayButton"
        android:layout_width="274dp"
        android:layout_height="115dp"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="100dp"
        android:onClick="Play"
        android:text="@string/play_button"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CoinTossTextView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="321dp"
        android:layout_height="158dp"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginBottom="61dp"
        android:contentDescription="@string/coinFlipImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/coinflip" />

</android.support.constraint.ConstraintLayout>