<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    tools:context=".Start_Menu">

    <Button
        android:id="@+id/NewGameButton"
        android:layout_width="417dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="newGame"
        android:text="@string/newGame_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeclomeTextView" />

    <Button
        android:id="@+id/LoadGameButton"
        android:layout_width="417dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="loadGame"
        android:text="@string/loadGame_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewGameButton" />

    <TextView
        android:id="@+id/WeclomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="75dp"
        android:text="@string/welcomeTextView"
        android:textColor="#FFFFFFFF"
        android:textSize="80sp"
        app:fontFamily="@font/akirn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/loadGameVerticleScrollView"
        android:layout_width="364dp"
        android:layout_height="372dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeclomeTextView">

        <LinearLayout
            android:id="@+id/loadGameLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/playLoadButton"
        android:layout_width="417dp"
        android:layout_height="160dp"
        android:layout_marginTop="200dp"
        android:onClick="PlayLoadGameButtonPressed"
        android:text="@string/playLoadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeclomeTextView" />

</android.support.constraint.ConstraintLayout>